<resources>
    <string name="app_name">Translator App</string>
    <string name="settings">settings</string>
    <string name="quick_translator">Quick Translator</string>
    <string name="quick_translator_desc">Using Floating icon Translate chat, Text, picture, full screen text, video/game sub-titles and more.</string>
    <string name="back_button">back button</string>
    <string name="search_button">search button</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_language">Select Language</string>
    <string name="conversation">Conversation</string>
    <string name="conversation_icon">conversation icon</string>
    <string name="english">English</string>
    <string name="urdu">Urdu</string>
    <string name="setting">Setting</string>
    <string name="quick_icon">quick ui icon</string>
    <string name="app_theme">App Theme</string>
    <string name="tap_to_change">Tap to change</string>
    <string name="go_inside">Open this setting</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmark_description">Bookmark description</string>
    <string name="history">History</string>
    <string name="kebab_menu">kebab menu icon</string>
    <string name="selected_language">Selected Language</string>
    <string name="translation">Translation</string>
    <string name="translator">Translator</string>
    <string name="original_text">The best way to learn the English is to speak as much as you can, you need to learn something you must deeply go in the learning process...</string>
    <string name="arabic_text">أفضل طريقة لتعلم اللغة الإنجليزية هي التحدث بقدر ما تستطيع فأنت بحاجة إلى تعلم شيء يجب أن تتعمق فيه في عملية التعلم</string>
    <string name="translate_button">Translate button</string>
    <string name="translate">Translate</string>
    <string name="voice_input">Voice Input</string>
    <string name="copy_translated_text">Copy translated text</string>
    <string name="text">Text</string>
    <string name="good_vibes">GOOD\nVIBES\nONLY</string>
    <string name="acha_vibes_sirf">اچھا\nوائبز\nصرف</string>
</resources>