<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    >

    <!-- Top App Bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/cameraCopyTopBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/original_text_container"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical">

                <!-- Back Icon -->
                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/back_button"
                    android:padding="8dp"
                    android:src="@drawable/ic_back" />

                <!-- Title Text -->
                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/back_icon"
                    android:text="@string/text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/original_text_container"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_background"
        android:elevation="2dp"
        android:paddingHorizontal="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraCopyTopBarLayout"
        app:layout_constraintBottom_toTopOf="@id/translated_text_container"
        >

        <TextView
            android:id="@+id/original_text_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:text="Original Text"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/speaker_icon_orignal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Edit text"
            android:padding="8dp"
            android:src="@drawable/ic_speaker_gray_simple"
            app:tint="@android:color/darker_gray"
            tools:layout_editor_absoluteY="11dp"
            app:layout_constraintStart_toEndOf="@+id/original_text_indicator"
            app:layout_constraintTop_toTopOf="@+id/original_text_indicator"
            />

        <EditText
            android:id="@+id/text_input_area"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:background="@null"
            android:gravity="top|start"
            android:text="@string/good_vibes"
            android:inputType="textMultiLine"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/original_text_indicator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translated_text_container"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_background"
        android:elevation="2dp"
        android:paddingHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/original_text_container">

        <TextView
            android:id="@+id/translated_text_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:text="Translated Text"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_output_area"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="6dp"
            android:gravity="top|start"
            android:background="@null"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:fontFamily="@font/noto_nastaliq_urdu"
            app:layout_constraintBottom_toTopOf="@+id/translated_copy_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/translated_text_indicator"
            android:text="@string/acha_vibes_sirf"/>

        <!-- Group of icons in the Bottom-Left Corner -->
        <ImageView
            android:id="@+id/translated_copy_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="18dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/copy_translated_text"
            android:padding="8dp"
            android:src="@drawable/ic_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/sky_blue"
            />

        <View
            android:id="@+id/divider_1"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/translated_copy_icon"
            app:layout_constraintStart_toEndOf="@+id/translated_copy_icon"
            app:layout_constraintTop_toTopOf="@+id/translated_copy_icon" />

        <ImageView
            android:id="@+id/translated_text_bookmark_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Expand translated text view"
            android:padding="8dp"
            android:src="@drawable/ic_bookmark"
            app:layout_constraintBottom_toBottomOf="@+id/translated_copy_icon"
            app:layout_constraintStart_toEndOf="@+id/divider_1"
            app:layout_constraintTop_toTopOf="@+id/translated_copy_icon"
            app:tint="@color/sky_blue"
            />

        <View
            android:id="@+id/divider_2"
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/translated_copy_icon"
            app:layout_constraintStart_toEndOf="@+id/translated_text_bookmark_icon"
            app:layout_constraintTop_toTopOf="@+id/translated_copy_icon" />

        <ImageView
            android:id="@+id/translated_text_speaker_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Bookmark translation"
            android:padding="8dp"
            android:src="@drawable/ic_speaker_gray_simple"
            app:layout_constraintBottom_toBottomOf="@+id/translated_copy_icon"
            app:layout_constraintStart_toEndOf="@+id/divider_2"
            app:layout_constraintTop_toTopOf="@+id/translated_copy_icon"
            app:tint="@color/sky_blue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>